--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,16 @@ Package: MongoPlussed
 Title: Extensions of Mongolite Package
 Version: 0.0.0.9000
 Authors@R: person("Emil", "Bode", email = "Emil.Bode@dans.knaw.nl", role = c("aut", "cre"))
-Description: Extra interfaces for working with a mongo-database. It is largely based on the mongolite package by Jeroen Ooms, but contains some extensions: Script for creating and accessing mongo-dbs in a docker-container, and for simplifying querying in nested documents. And it hides less of the internals, so you can more easily write own extensions, and also use methods from the RMongo-packaage
+Description: Extra interfaces for working with a mongo-database. It is largely based on the mongolite package by Jeroen Ooms, but contains some extensions: Script for creating and accessing mongo-dbs in a docker-container, and for simplifying querying in nested documents. And it hides less of the internals, so you can more easily write own extensions, and also use methods from the RMongo-package.
 Depends: R (>= 3.5.0)
 Imports: mongolite (>= 1.5),
+    RMongo (>= 0.0.25),
+    jsonlite (>= 1.5),
+    plyr (>= 1.8.4),
     dplyr (>= 0.7.5),
-    EmilMisc (>= 0.0.0.9001)
-License: GNU GPL 3.0
+    EmilMisc (>= 0.0.0.9001),
+    stringr (>= 1.3.1)
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
