--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Imports: mongolite (>= 1.5),
     dplyr (>= 0.7.5),
     EmilMisc (>= 0.0.1),
     stringr (>= 1.3.1)
+Additional_repositories: https://github.com/Dans-labs/R-package_EmilMisc
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
